fix(ui): dark mode height fix

--- a/apps/howl/src/app/common/context/dark-mode/theme.module.scss
+++ b/apps/howl/src/app/common/context/dark-mode/theme.module.scss
@@ -4,6 +4,7 @@
   --surface-color: #fff;
   background: var(--background-color);
   color: var(--text-color);
+  min-height: 100vh;
 }
 
 .darkMode {
